syntax = "proto3";

package nz.ac.canterbury.seng302;

option java_multiple_files = true;
option java_package = "nz.ac.canterbury.seng302.shared.util";
option java_outer_classname = "FileUploadProto";

// The possible states the upload can be in
enum FileUploadStatus {
    PENDING = 0; // Before any content bytes have been received (e.g when metadata sent first) 
    IN_PROGRESS = 1; // During upload of content bytes
    SUCCESS = 2;
    FAILED = 3;
 }
 message FileUploadStatusResponse {
    FileUploadStatus Status = 1;
    string Message = 2;
 }